Remove sticky header on cart drawer to avoid overlap of content

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -182,10 +182,6 @@ cart-drawer {
 .cart-drawer thead {
   display: inline-table;
   width: 100%;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  background-color: rgb(var(--color-background));
 }
 
 cart-drawer-items {
